# algent

./: .arg  .gitignore  .secret  .tool-versions  CLI_EXAMPLES.md  DOCKER_DEPLOYMENT_RESULTS.md  Dockerfile  Dockerfile.broken.backup  Earthfile  LICENSE  README.md  TEST_RESULTS.md  api_server.py  cli-requirements.txt  deploy_docker.sh  dev_setup.sh  docker-compose-earthly.yml  docker-compose-simple.yml  docker-compose.earthly.yml  docker-compose.yml  docker_servers.sh  install_cli.sh  install_cli_fixed.sh  pyproject.toml  pyproject.toml.old  requirements.txt  revert_earthly.sh  setup.sh  setup_completion.sh  test_basic.py  test_cli_install.py  test_docker_compose.sh  test_e2e.sh  test_earthly.sh  test_quick_wins.py  update.sh
.backup/20250615_144517/: Dockerfile  Dockerfile.agent  Dockerfile.api  Dockerfile.backup  Dockerfile.mcp
config/: agent_config.yaml  nginx.conf  prometheus.yml
examples/: simple_agent.py
src/: CLI_README.md  cli.py
src/a2a/: client.py
src/agents/: file_processor.py  orchestrator.py  vllm_agent.py
src/core/: agent.py  message.py  security.py
src/mcp/: client.py
src/utils/: logging.py  persistence.py
