[project]
name = "algent"
version = "1.0.0"
description = "Scalable Agent-to-Agent communication system with MCP"
authors = [
    {name = "Al McKay", email = "aldmckay@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["ai", "agents", "a2a", "mcp", "microservices", "cli"]

dependencies = [
    # Core dependencies - Python 3.13 compatible versions
    "aiohttp>=3.9.0",
    "redis>=5.0.0",  # Python 3.13 compatible (instead of aioredis)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # CLI dependencies
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.25.0",
    
    # Security
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
]

[project.scripts]
agentic = "src.cli:app"
algent = "src.cli:app"

[project.urls]
Homepage = "https://github.com/aldmckay/algent"
Documentation = "https://docs.algent.com"
Repository = "https://github.com/aldmckay/algent.git"
Issues = "https://github.com/aldmckay/algent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
python_version = "313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"